traces/bug_33.txt
src/medit/util.c:25: error: DEAD_STORE
  The value written to &font_style (type void*) is never used.
Showing all 1 steps of the trace


src/medit/util.c:25:7: Write of unused value
23.     if ( !strcmp(name,"helvetica") ) {
24.       if (size == 12)
25.         font_style = GLUT_BITMAP_HELVETICA_12;
            ^
26.       else if (size == 18)
27.         font_style = GLUT_BITMAP_HELVETICA_18;
